--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,11 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
+    "package.json": "^2.0.1",
     "react": "^16.12.0",
+    "react-bootstrap": "^0.32.4",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "3.3.0"
   },
   "scripts": {
