--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,10 @@
     "bootstrap": "^4.3.1",
     "package.json": "^2.0.1",
     "react": "^16.12.0",
+    "react-beautiful-dnd": "^12.2.0",
     "react-bootstrap": "^0.32.4",
     "react-dev-utils": "^10.1.0",
+    "react-dnd": "^10.0.2",
     "react-dom": "^16.12.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "3.3.0"
