--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,11 +8,13 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "4.0.0-alpha.46",
     "@material-ui/pickers": "^3.2.10",
+    "@material-ui/styles": "^4.9.10",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "material-table": "^1.57.2",
     "moment": "^2.24.0",
     "package.json": "^2.0.1",
     "prop-types": "^15.7.2",
@@ -21,6 +23,7 @@
     "react-bootstrap": "^0.32.4",
     "react-dev-utils": "^10.1.0",
     "react-dom": "^16.12.0",
+    "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^3.4.0",
     "styled-components": "^5.0.1 "
