--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react": "^16.12.0",
     "react-beautiful-dnd": "^12.2.0",
     "react-bootstrap": "^0.32.4",
+    "react-chartjs-2": "^2.9.0",
     "react-dev-utils": "^10.1.0",
     "react-dom": "^16.12.0",
     "react-perfect-scrollbar": "^1.5.8",
