--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "chart.js": "^2.9.3",
     "material-table": "^1.57.2",
     "moment": "^2.24.0",
     "package.json": "^2.0.1",
