--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,7 +28,8 @@
     "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^3.4.0",
-    "styled-components": "^5.0.1 "
+    "styled-components": "^5.0.1 ",
+    "validator": "^13.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
