--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "react-device-detect": "^1.13.1",
     "react-dev-utils": "^10.1.0",
     "react-dom": "^16.12.0",
+    "react-latex": "^2.0.0",
     "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^3.4.0",
