--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,3 +1,4 @@
+  
 {
   "name": "frontend",
   "version": "0.1.0",
@@ -28,7 +29,7 @@
     "react-dom": "^16.12.0",
     "react-latex": "^2.0.0",
     "react-perfect-scrollbar": "^1.5.8",
-    "react-router-dom": "^4.3.1",
+    "react-router-dom": "5.2.0",
     "react-scripts": "^3.4.0",
     "styled-components": "^5.0.1 ",
     "validator": "^13.0.0"
