--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,4 +1,3 @@
-  
 {
   "name": "frontend",
   "version": "0.1.0",
@@ -24,9 +23,10 @@
     "react-beautiful-dnd": "^12.2.0",
     "react-bootstrap": "^0.32.4",
     "react-chartjs-2": "^2.9.0",
-    "react-device-detect": "^1.13.1",
     "react-dev-utils": "^10.1.0",
+    "react-device-detect": "^1.13.1",
     "react-dom": "^16.12.0",
+    "react-items-carousel": "^2.8.0",
     "react-latex": "^2.0.0",
     "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "5.2.0",
